po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 08:46+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -117,7 +117,7 @@ msgstr "No ha estat possible trobar meta de dades del processador de pagament"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Site URL"
-msgstr ""
+msgstr "URL del lloc"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Recurring Payments URL"
@@ -2234,21 +2234,21 @@ msgstr "rebut"
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Billing address required"
-msgstr ""
+msgstr "Adreça de facturació requerida"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "End date should be after Start date."
-msgstr ""
+msgstr "La data de finalització ha de ser posterior a la data d'inici."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 #: CRM/Report/Form/Instance.php
 msgid "Title is a required field."
-msgstr ""
+msgstr "El títol és un camp requerit"
 
 #: CRM/Contribute/Form/Search.php CRM/Report/Form/Contribute/SoftCredit.php
 msgid "Contributor Name"
-msgstr ""
+msgstr "Nom del contribuïdor"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -2299,7 +2299,7 @@ msgstr ""
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
 msgid "Required Elements"
-msgstr ""
+msgstr "Elements requerits"
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -2349,29 +2349,29 @@ msgstr ""
 #: xml/templates/message_templates/membership_offline_receipt_text.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Amount before Tax"
-msgstr ""
+msgstr "Import abans d'impostos"
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "SubTotal"
-msgstr ""
+msgstr "Subtotal"
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "Amount Before Tax:"
-msgstr ""
+msgstr "Import abans d'impostos"
 
 #: CRM/Member/Form/Search.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
 msgid "Member Name"
-msgstr ""
+msgstr "Nom del membre"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 msgid "Total Pledged"
-msgstr ""
+msgstr "Total compromès"
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 #: CRM/Report/Form/Contribute/Recur.php
