--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 12:43+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19418,7 +19418,7 @@ msgstr "Eingehende E-Mail."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Open Case"
-msgstr "Offener Fall"
+msgstr "Fall anlegen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Follow up"
