--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 12:51+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -9107,7 +9107,7 @@ msgstr "Veure únicament?"
 
 #: CRM/Custom/Form/Field.php
 msgid "Is this Field Searchable?"
-msgstr "¿ permet  cerques aquest camp?"
+msgstr "Aquest camp permet  cerques?"
 
 #: CRM/Custom/Form/Field.php
 msgid "Search by Range?"
@@ -9310,7 +9310,7 @@ msgstr "S'ha desat el conjunt de camps personalitzats '%1'. "
 #: CRM/Custom/Form/Group.php
 msgid ""
 "Your custom field set '%1' has been added. You can add custom fields now."
-msgstr "S'ha afegit el conjunt de camps personalitzats '%1'. Ara ja pot afegir camps personalitzats."
+msgstr "S'ha afegit el conjunt de camps personalitzats '%1'. Ja podeu afegir camps personalitzats."
 
 #: CRM/Custom/Form/Group.php
 msgid ""
@@ -24667,11 +24667,11 @@ msgstr ""
 
 #: CRM/Custom/Form/Field.php
 msgid "Custom field '%1' has been saved."
-msgstr ""
+msgstr "S'ha desat el camp personalitzat '%1'."
 
 #: CRM/Custom/Form/Field.php
 msgid "Ready to add another."
-msgstr ""
+msgstr "A punt per afegir-ne un altre."
 
 #: CRM/Custom/Form/Group.php
 msgid ""
@@ -25891,7 +25891,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Search/Custom/PriceSet.php
 msgid "Participant ID"
-msgstr ""
+msgstr "Identificador del participant"
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact Subtype field of 1 contact has not been updated."
@@ -26282,15 +26282,15 @@ msgstr ""
 
 #: CRM/Core/Resources.php
 msgid "Past 3 Months"
-msgstr ""
+msgstr "Els passats 3 mesos"
 
 #: CRM/Core/Resources.php
 msgid "Past 6 Months"
-msgstr ""
+msgstr "Els passats 6 mesos"
 
 #: CRM/Core/Resources.php
 msgid "Past Year"
-msgstr ""
+msgstr "L'any passat"
 
 #: CRM/Core/SelectValues.php
 msgid "Automatic"
@@ -26330,7 +26330,7 @@ msgstr ""
 
 #: CRM/Export/Form/Map.php
 msgid "Export"
-msgstr ""
+msgstr "Exporta"
 
 #: CRM/Friend/Form.php
 msgid "Thank you for your support"
@@ -26383,7 +26383,7 @@ msgstr ""
 
 #: CRM/Utils/VersionCheck.php
 msgid "Download now"
-msgstr ""
+msgstr "Descarrega ara"
 
 #: CRM/Utils/VersionCheck.php
 msgid "Suppress this message"
