--- a/po/id_ID/financial.po
+++ b/po/id_ID/financial.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 14:12+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgstr "Kontak ini tidak dapat dihapus secara tetap karena rekaman kontak terkai
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "Tabel berikut mempunyai masukan untuk jenis finansial ini: %1"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -333,7 +333,7 @@ msgid ""
 " account '%2'. That income account, along with standard financial accounts "
 "'%3', '%4' and '%5' have been linked to the financial type. You may edit or "
 "replace those relationships here."
-msgstr ""
+msgstr "Jenis Finansial '%1' anda telah dibuat, bersama dengan akun pendapatan terhubung '%2'. Akun pendapatan itu, bersama akun finanssial standar '%3', '%4', dan '%5' telah dikaitkan ke jenis finansial. Anda dapat menyunting atau mengganti hubungan tersebut disini."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialType.tpl
@@ -625,7 +625,7 @@ msgstr "Diharapkan"
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Click OK to override and update expected values."
-msgstr "Klik OK untuk mengesampignkan dan memperbaharui nilai yang diharapkan."
+msgstr "Klik OKE untuk mengesampingkan dan memperbaharui nilai yang diharapkan."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Updated"
@@ -896,7 +896,7 @@ msgid ""
 "Your Financial \"%1\" Type has been created and assigned to an existing "
 "financial account with the same title. You should review the assigned "
 "account and determine whether additional account relationships are needed."
-msgstr ""
+msgstr "Jenis Finansial \"%1\" anda telah dibuat dan diberikan ke akun finansial yang ada dengan judul sama. Anda harus meninjau akun yang diberikan dan menentukan apakah tambahan hubungan akun dibutuhkan."
 
 #: CRM/Financial/Form/FinancialType.php
 msgid ""
@@ -904,7 +904,7 @@ msgid ""
 "income account \"%2\". That income account, along with standard financial "
 "accounts \"%3\", \"%4\" and \"%5\" have been linked to the financial type. "
 "You may edit or replace those relationships here."
-msgstr ""
+msgstr "Jenis Finansial ';%1'; anda telah dibuat, bersama dengan akun pendapatan terhubung ';%2';. Akun pendapatan itu, bersama akun finanssial standar ';%3';, ';%4';, dan ';%5'; telah dikaitkan ke jenis finansial. Anda dapat menyunting atau mengganti hubungan tersebut disini."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Type Account"
@@ -940,19 +940,19 @@ msgstr "Gambaran Jenis Pengolah"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Created ID"
-msgstr ""
+msgstr "ID Dibuat"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Tanggal Kadaluarsa"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
-msgstr ""
+msgstr "Angka Akun Bertopeng"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "Alamat IP"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Taxable accounts should have Financial Account Type set to Liability."
