--- a/po/id_ID/pledge.po
+++ b/po/id_ID/pledge.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 14:16+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +25,7 @@ msgstr "Perjanjian"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Balance Amount"
-msgstr "BIlangan Seimbang"
+msgstr "Bilangan Seimbang"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Date"
@@ -808,7 +808,7 @@ msgstr "Sesuaikan bilangan terjadwal"
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
 "Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Klik OK untuk menyimpan rekaman Janji ini DAN mengirim pengakuan ke %1 sekarang."
+msgstr "Klik OKE untuk menyimpan rekaman Janji ini DAN mengirim pengakuan ke %1 sekarang."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Click arrow to view pledge payments."
@@ -845,11 +845,11 @@ msgstr "Klik <a %1>Tambah Janji</a> untuk merekam janji baru yang diterima dari 
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "ID Kontak %1 %2"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Nama Penjanji"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
