--- a/po/id_ID/member.po
+++ b/po/id_ID/member.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 14:03+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2363,7 +2363,7 @@ msgstr "Klik <a %1>Ajukan Kartu Kredit Keanggotaan</a> untuk mengolah Keanggotaa
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status(s)"
-msgstr ""
+msgstr "Keadaan Keanggotaan"
 
 #: CRM/Member/Form/Membership.php
 msgid "Office Credit Card Membership Signup Contribution"
@@ -2385,13 +2385,13 @@ msgstr "Kumpulan harga keanggotaan terhubung dengan sumbangan daring mengizinkan
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution"
-msgstr ""
+msgstr "Anda butuh mengadakan Pembayaran Keanggotaan Terpisah ketika halaman sumbangan daring dikonfigurasikan untuk kedua Keanggotaan dan Sumbangan Berulang"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page"
-msgstr ""
+msgstr "Anda tidak dapat mengadakan keduanya Sumbangan Berulang dan Otomatis-pembaruan di halaman sumbangan daring yang sama"
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid ""
@@ -2402,7 +2402,7 @@ msgstr "Perpanjangan Keanggotaan menggunakan kartu kredit membutuhkan biaya Kean
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Includes %1 amount of %2"
-msgstr ""
+msgstr "Sertakan bilangan %1 dari %2"
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Office Credit Card Membership Renewal Contribution"
@@ -2471,13 +2471,13 @@ msgstr "Mengesampikan tanggal akhir"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to %1 ?"
-msgstr ""
+msgstr "Penegasan keanggotaan email otomatis dan penerimaan ke %1 ?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "OR if the payment is from a different contact, this email will only go to "
 "them."
-msgstr ""
+msgstr "ATAU jika pembayaran adalah dari kontak berbeda, email ini hanya akan pergi ke mereka."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "No contacts are currently eligible to inherit this relationship."
