--- a/po/id_ID/contribute.po
+++ b/po/id_ID/contribute.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 13:58+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5140,17 +5140,17 @@ msgstr "Kesalahan Pengolah Pembayaran"
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution."
-msgstr ""
+msgstr "Anda butuh mengadakan Pembayaran Keanggotaan Terpisah ketika halaman sumbangan daring dikonfigurasikan untuk kedua Keanggotaan dan Sumbangan Berulang."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page."
-msgstr ""
+msgstr "Anda tidak dapat mengadakan keduanya Sumbangan Berulang dan Otomatis-pembaruan di halaman sumbangan daring yang sama."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Text Color"
-msgstr ""
+msgstr "Warna Teks Tombol"
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
