po: update po/id_ID/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/mailing.po
+++ b/po/id_ID/mailing.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 04:19+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -289,7 +289,7 @@ msgstr "Jenis Pekerjaan"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Job Offset"
-msgstr ""
+msgstr "Menyeimbangkan Pekerjaan"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Job Limit"
@@ -617,7 +617,7 @@ msgstr "Silahkan sediakan pesan berbentuk Teks atau HTML - atau keduanya."
 
 #: CRM/Mailing/Form/Upload.php
 msgid "This message is missing a required token - {%1}: %2"
-msgstr "Pesan ini hilang memutuhkan token - {%1}: %2"
+msgstr "Pesan ini hilang membutuhkan token - {%1}: %2"
 
 #: CRM/Mailing/Form/Upload.php
 msgid "More information on required tokens..."
@@ -1594,7 +1594,7 @@ msgstr "Pekerjaan Penyuratan Induk"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Offset"
-msgstr ""
+msgstr "Penyuratan Menyeimbangkan Pekerjaan"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Limit"
