--- a/po/id_ID/case.po
+++ b/po/id_ID/case.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 13:49+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1211,11 +1211,11 @@ msgstr "Lihat aktifitas"
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
-msgstr ""
+msgstr "Apakah anda ingin  <a %1>sunting aktivitas yang ada</a>?"
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1 Tersimpan"
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
