po: update po/id_ID/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/event.po
+++ b/po/id_ID/event.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 13:57+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1672,7 +1672,7 @@ msgstr "Ini judul dimana pengguna akan melihat ketika mereka memilih cetakan aca
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Cetakan"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3733,7 +3733,7 @@ msgstr "Transaksi Lengkap"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "ID Peran Awal"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
@@ -3848,13 +3848,13 @@ msgstr "Hapus peserta dan acara yang dapat anda sunting"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "kelola profil acara"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Izinkan pengguna untuk membuat, sunting dan salin formulir profil terhubung-acara digunakan untuk pendaftaran acara daring"
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -3922,7 +3922,7 @@ msgstr "Jumlah Pajak"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "CATATAN: Kontak terpilih di hasil pencarian tidak bersangkutan disini; semua kontak yang memenuhi kriteria berikut akan berada di kelompok."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
@@ -3935,7 +3935,7 @@ msgstr "Anak"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Jumlah Peserta"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
