--- a/po/id_ID/extension.po
+++ b/po/id_ID/extension.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 13:41+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -81,7 +81,7 @@ msgstr "Gagal menentukan URL untuk tambahan (%1). harap perbaharui <a href=\"%2\
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Kesalahan mengurai di tambahan: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -99,7 +99,7 @@ msgstr "URL tambahan tidak disetel dengan benar. Harap pergi ke <a href=\"%1\">H
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Direktori tambahan tidak disetel atau tidak dapat ditulis. Klik <a href='%1'>disini</a> untuk menyetel direktori tambahan."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
