--- a/po/id_ID/campaign.po
+++ b/po/id_ID/campaign.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 13:48+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -393,7 +393,7 @@ msgstr "Informasi Utama"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Hasil"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -1094,7 +1094,7 @@ msgstr "Jika anda ingin menghubungkan rekaman ini dengan kampanye, anda dapat <a
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
+msgstr "Id Petisi dan/atau Id Aktivitas bukan jenis Positif."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
@@ -1108,7 +1108,7 @@ msgstr "Diterbitkan"
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
+msgstr[0] "%count responden tidak diterbitkan."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "You can reserve a maximum of %count contact at a time for this survey."
