--- a/po/id_ID/admin.po
+++ b/po/id_ID/admin.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 04:28+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -885,12 +885,12 @@ msgstr "Perubahan anda telah disimpan."
 #: CRM/Admin/Form/PreferencesDate.php
 #: templates/CRM/Admin/Page/PreferencesDate.tpl
 msgid "Start Offset"
-msgstr ""
+msgstr "Awal Mengimbangi"
 
 #: CRM/Admin/Form/PreferencesDate.php
 #: templates/CRM/Admin/Page/PreferencesDate.tpl
 msgid "End Offset"
-msgstr ""
+msgstr "Akhir Mengimbangi"
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Format"
@@ -1243,7 +1243,7 @@ msgstr "Waktu habis simpan dasbor"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "CheckSum Lifespan"
-msgstr ""
+msgstr "Umur CheckSum "
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Recaptcha Options"
@@ -1970,7 +1970,7 @@ msgstr "Anda tidak punya izin untuk merubah cetakan ini."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Cetakan Pesan"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4855,7 +4855,7 @@ msgstr "Cetakan pesan alurkerja sistem digunakan untuk membangkitkan email terki
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Alurkerja"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -4998,7 +4998,7 @@ msgstr "Tidak ada pilihan dimasukkan untuk pilihan kelompok ini. Anda dapat <a h
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Jenis Aktivitas"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6357,23 +6357,23 @@ msgstr "Catatan: label terpilih digunakan oleh kesatuan tambahan."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Memasang \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Unduh dan Pasang \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Jangan dipasang \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Adakan \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Tiadakan \"%1\"?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6607,7 +6607,7 @@ msgstr "Peringati situs admin tentang terbitan CiviCRM baru."
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "Anda dapat menentukan pilihan tema reCAPTCHA sebagai data dispisah koma.(sebagai contoh: theme:blackglass', lang : 'fr' )."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6700,7 +6700,7 @@ msgstr "Pilih bidang"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
-msgstr ""
+msgstr "Pilih-Otomatis Pengguna Saat Ini"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
@@ -6743,7 +6743,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "'}Sudahkah anda mendaftarkan situs ini di CiviCRM.org? Jika tidak, harap bantu memperkuat lingkungan CiviCRM dengan mengambil beberapa menit ke <a href=\"%1\" target=\"_blank\">isi formulir pendaftaran</a>. Informasi yang disimpan akan membantu kita mengutamakan perbaikan, sasaran komunikasi kami dan membangun komunitas. Jika anda mempunyai peranan teknis untuk situs ini, pastikan untuk memeriksa Tetap Berhubungan untuk menerima pembaharuan teknis (besaran rendah daftar penyuratan)."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
