--- a/po/sv_SE/countries.po
+++ b/po/sv_SE/countries.po
@@ -6,13 +6,13 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Stefan Gagner <stefan@mei-ya.se>, 2013
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 16:35+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,8 +1042,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (Franska delen)"
