--- a/po/id_ID/report.po
+++ b/po/id_ID/report.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 14:08+0000\n"
+"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1199,7 +1199,7 @@ msgstr "Klik: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Sisihkan"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -2084,20 +2084,20 @@ msgstr "Angka awal baris per halaman untuk kebanyakan laporan adalah 50. Bagaima
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr ""
+msgstr "Contoh Laporan Dibuat Oleh"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr ""
+msgstr "Contoh Laporan Dimiliki Oleh"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Sertakan Aktivitas Kasus"
 
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Silahkan adakan 'Sertakan Aktivitas Kasus' untuk menyaring dengan jenis Aktivitas Kasus."
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
@@ -2156,7 +2156,7 @@ msgstr "Rata-rata Sumbangan"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Tanggal Terpenuhi Premium"
 
 #: CRM/Report/Form.php
 msgid "Columns"
@@ -2176,31 +2176,31 @@ msgstr "Pengurutan"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr ""
+msgstr "Awalan Kontak"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Nama Panggilan"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr ""
+msgstr "Akhiran Kontak"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr ""
+msgstr "Salam Alamat"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Judul Pekerjaan Kontak"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
-msgstr ""
+msgstr "Penciri kontak dari sistem eksternal"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
-msgstr ""
+msgstr "%1 untuk %2 ini."
 
 #: CRM/Report/Info.php
 msgid "access CiviReport"
@@ -2236,7 +2236,7 @@ msgstr "Kelola cetakan laporan"
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - Cetakan"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Title and Format"
