--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-10 16:57+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2301,7 +2301,7 @@ msgstr "Egen adressat"
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
 #: templates/CRM/common/Navigation.tpl
 msgid "Job Title"
-msgstr "Yrke"
+msgstr "Befattning"
 
 #: CRM/Contact/DAO/Contact.php CRM/Contact/Form/Edit/Demographics.php
 #: CRM/Contact/Form/Search/Criteria.php CRM/Contact/Import/Parser/Contact.php
@@ -12627,8 +12627,8 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected invalid data and/or formatting errors in %count "
 "records. These records have not been imported."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "CiviCRM har upptäckt ogiltiga data och/eller formateringsfel på %count rad. Denna rad har inte importerats."
+msgstr[1] "CiviCRM har upptäckt ogiltiga data och/eller formateringsfel på %count rader. Dessa rader har inte importerats."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 #: templates/CRM/Contact/Import/Form/Summary.tpl
@@ -14960,7 +14960,7 @@ msgstr "Totalt antal rader i det importerade datat."
 msgid ""
 "Rows with invalid data in one or more fields (for example, invalid email "
 "address formatting). These rows will be skipped (not imported)."
-msgstr ""
+msgstr "Rader med ogiltiga data i ett eller flera fält (till exempel ogiltigt format på epostadressen). Dessa rader kommer att hoppas över (inte importeras)."
 
 #: templates/CRM/Contact/Import/Form/Preview.tpl
 msgid ""
@@ -23241,7 +23241,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/Contact.php xml/templates/civicrm_data.tpl
 msgid "Formal Title"
-msgstr ""
+msgstr "Formell titel"
 
 #: CRM/Contact/DAO/Contact.php
 #: CRM/Contact/Form/Edit/CommunicationPreferences.php
@@ -25138,7 +25138,7 @@ msgstr ""
 msgid ""
 "Choose how you communicate with this contact, e.g. on formal or familiar "
 "terms."
-msgstr ""
+msgstr "Välj hur man bör kommunicera med denna kontakt, t.ex med formell eller familjär ton."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -25618,11 +25618,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Formal"
-msgstr ""
+msgstr "Formell"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Familiar"
-msgstr ""
+msgstr "Familjär"
 
 #: xml/templates/civicrm_data.tpl
 msgid "User Preference"
