po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 00:52+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -175,27 +175,27 @@ msgstr "Är detta arrangemangsnamnskyltsformat det förvalda?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size"
-msgstr ""
+msgstr "Pappersstorlek"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size (w x h)"
-msgstr ""
+msgstr "Pappersstorlek (b x h)"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Width"
-msgstr ""
+msgstr "Etikettens bredd"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Height"
-msgstr ""
+msgstr "Etikettens höjd"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Row"
-msgstr ""
+msgstr "Etiketter per rad"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Column"
-msgstr ""
+msgstr "Etiketter per kolumn"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Horizontal Spacing"
@@ -219,7 +219,7 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Must be numeric"
-msgstr ""
+msgstr "Måste vara numerisk"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Admin/Form/PdfFormats.php
 msgid "Weight must be integer"
@@ -227,11 +227,11 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Selected Label Format has been deleted."
-msgstr ""
+msgstr "Det valda etikettformatet har raderats."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "of "
-msgstr ""
+msgstr "av"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
@@ -288,7 +288,7 @@ msgstr "Konvertering av e-post till åtgärder."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Used For?"
-msgstr ""
+msgstr "Används för?"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
@@ -572,7 +572,7 @@ msgstr "Är detta sidformat för PDF-dokument standardformatet?"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Margin must be numeric"
-msgstr ""
+msgstr "Marginalen måste vara numerisk"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Selected PDF Page Format has been deleted."
@@ -723,7 +723,7 @@ msgstr "Textruta"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Input Format"
-msgstr ""
+msgstr "Inmatningsformat"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "CiviEvent Component Settings"
