po: update po/sv_SE/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/provinces.po
+++ b/po/sv_SE/provinces.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 00:12+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15855,48 +15855,48 @@ msgstr "Vodice"
 
 msgctxt "province"
 msgid "Abkhazia"
-msgstr ""
+msgstr "Abchazien"
 
 msgctxt "province"
 msgid "Adjara"
-msgstr ""
+msgstr "Adzjarien"
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilisi"
 
 msgctxt "province"
 msgid "Guria"
-msgstr ""
+msgstr "Gurien"
 
 msgctxt "province"
 msgid "Imereti"
-msgstr ""
+msgstr "Imeretien"
 
 msgctxt "province"
 msgid "Kakheti"
-msgstr ""
+msgstr "Kachetien"
 
 msgctxt "province"
 msgid "Kvemo Kartli"
-msgstr ""
+msgstr "Nedre Kartlien"
 
 msgctxt "province"
 msgid "Mtskheta-Mtianeti"
-msgstr ""
+msgstr "Mtscheta-Mtianeti"
 
 msgctxt "province"
 msgid "Racha-Lechkhumi and Kvemo Svaneti"
-msgstr ""
+msgstr "Ratja-Letjchumi och Nedre Svanetien"
 
 msgctxt "province"
 msgid "Samegrelo-Zemo Svaneti"
-msgstr ""
+msgstr "Megrelien-Övre Svanetien"
 
 msgctxt "province"
 msgid "Samtskhe-Javakheti"
-msgstr ""
+msgstr "Samtsche-Dzjavachetien"
 
 msgctxt "province"
 msgid "Shida Kartli"
-msgstr ""
+msgstr "Inre Kartlien"
