po: update po/fr_CA/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2015-12-11 12:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -832,7 +832,7 @@ msgstr "Tous les"
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Veuillez sélectionner une méthode de paiement"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
@@ -2190,7 +2190,7 @@ msgstr "Autoriser l'inscription en ligne"
 
 #: CRM/Badge/Form/Layout.php CRM/Financial/DAO/PaymentToken.php
 msgid "Token"
-msgstr ""
+msgstr "Jeton"
 
 #: CRM/Batch/Form/Batch.php CRM/Financial/Form/Search.php
 msgid "Number of Items"
@@ -2220,7 +2220,7 @@ msgstr "Un blocage de facture est-il requis"
 
 #: CRM/Contribute/DAO/ContributionRecur.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Token ID"
-msgstr ""
+msgstr "ID du jeton de paiement"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Report/Form/Contribute/Recur.php
@@ -2252,7 +2252,7 @@ msgstr "Titre est un champ obligatoire."
 
 #: CRM/Contribute/Form/Search.php CRM/Report/Form/Contribute/SoftCredit.php
 msgid "Contributor Name"
-msgstr ""
+msgstr "Nom du contributeur"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -2371,7 +2371,7 @@ msgstr "Montant hors taxe :"
 #: CRM/Member/Form/Search.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
 msgid "Member Name"
-msgstr ""
+msgstr "Nom du membre"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 msgid "Total Pledged"
