po: update po/de_DE/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/campaign.po
+++ b/po/de_DE/campaign.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 11:52+0000\n"
+"Last-Translator: Rolf Schumann <rolf.schumann@robinwood.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -106,7 +106,7 @@ msgstr "Kampagnenstatus ID"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External Identifier"
-msgstr ""
+msgstr "externe Kampagnen-ID"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
@@ -126,11 +126,11 @@ msgstr "Erstellungsdatum der Kampagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Kampagne wurde geändert von"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
-msgstr ""
+msgstr "Kampagne wurde geändert am"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/Form/Campaign.php
 msgid "Campaign Goals"
