--- a/po/hu_HU/contribute.po
+++ b/po/hu_HU/contribute.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:15+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5147,17 +5147,17 @@ msgstr "Fizetés feldolgozó hiba"
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution."
-msgstr ""
+msgstr "Engedélyeznie kell a különálló tagság fizetést, amikor az online adomány oldal a tagságra és az ismétlődő fizetésre is beállított."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page."
-msgstr ""
+msgstr "Nem engedélyezheti egyszerre az ismétlődő adományokat és  az automatikusan megújuló tagságot egy online adomány oldalon."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Text Color"
-msgstr ""
+msgstr "Nyomógomb szöveg színe"
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
