po: update po/fr_FR/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -8,6 +8,7 @@
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Moyg <moygwp+transifex@gmail.com>, 2014
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
+# Philippe Migrenne <migrenne@gmail.com>, 2015
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 15:09+0000\n"
+"Last-Translator: Philippe Migrenne <migrenne@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2220,7 +2221,7 @@ msgstr "Votre contribution ne sera pas complétée tant que vous n'aurez pas cli
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Click here to do this for a different person."
-msgstr ""
+msgstr "Cliquez ici pour faire ceci pour quelqu'un d'autre"
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Not %1, or want to do this for a different person"
@@ -4676,7 +4677,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "No payment information found for this record"
-msgstr ""
+msgstr "Aucune information de paiement trouvée pour cet enregistrement"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Credit card payment is not for Refund payments use"
@@ -4688,7 +4689,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund amount must equal refund due amount."
-msgstr ""
+msgstr "Le montant du remboursement doit être égal au montant du remboursement dû."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid ""
@@ -4740,7 +4741,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Thank-you Letter Options"
-msgstr ""
+msgstr "Options pour la lettre de remerciement"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "- no grouping -"
@@ -4768,7 +4769,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Generate PDFs for printing (only)"
-msgstr ""
+msgstr "Générer des documents PDF pour imprimer (seulement)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid ""
@@ -4825,7 +4826,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "submit credit card payment"
-msgstr ""
+msgstr "Soumettre un paiement par carte bancaire"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Due"
@@ -4841,7 +4842,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Automatically email a receipt to %1?"
-msgstr ""
+msgstr "Envoyer un reçu automatiquement par courriel à %1?"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid ""
