--- a/po/hu_HU/campaign.po
+++ b/po/hu_HU/campaign.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:51+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -394,7 +394,7 @@ msgstr "Fő információ"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Eredmények"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -1095,7 +1095,7 @@ msgstr "Ha össze szeretné kötni ezt a rekordot egy kampánnyal, akkor  <a %1\
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
+msgstr "Petíció azonosító és/vagy tevékenység azonosító nem pozitív típusú."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
@@ -1110,8 +1110,8 @@ msgstr "Feloldva"
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 válaszadó nem szabadult fel."
+msgstr[1] " %count válaszadó nem szabadult fel."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "You can reserve a maximum of %count contact at a time for this survey."
