po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2015-12-11 16:02+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -6025,7 +6025,7 @@ msgstr "-opérateur-"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "In"
-msgstr "In"
+msgstr "est"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Like"
@@ -7120,7 +7120,7 @@ msgstr "IN"
 
 #: CRM/Core/DAO/MappingField.php
 msgid "NOT IN"
-msgstr "NOT IN"
+msgstr "n'est pas"
 
 #: CRM/Core/DAO/MappingField.php
 msgid "LIKE"
@@ -26279,7 +26279,7 @@ msgstr "modifier les modèles de message"
 
 #: CRM/Core/Permission.php
 msgid "view my invoices"
-msgstr ""
+msgstr "afficher mes factures"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
@@ -26331,7 +26331,7 @@ msgstr "Montant non déductible"
 
 #: CRM/Core/SelectValues.php
 msgid "Not In"
-msgstr "Pas dans"
+msgstr "n'est pas"
 
 #: CRM/Custom/Form/Field.php CRM/Custom/Form/Group.php CRM/Price/Form/Set.php
 msgid "Name cannot not start with a digit"
