--- a/po/ca_ES/financial.po
+++ b/po/ca_ES/financial.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:46+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +35,7 @@ msgstr "Data de creació:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By: "
-msgstr ""
+msgstr "Última modificació per:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument: "
