--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 09:30+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1970,7 +1970,7 @@ msgstr "Nincs jogosultsága ezen sablon visszaállításához."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Üzenet sablon"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4855,7 +4855,7 @@ msgstr "A rendszer munkafolyamat sablonokat az ügyfeleknek és az adminisztrát
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Munkafolyamat"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -4998,7 +4998,7 @@ msgstr "Opciók nem lettek megadva ehhez az opció csoporthoz . Itt adhat hozzá
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Tevékenység típusok"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6357,23 +6357,23 @@ msgstr "Megjegyzés: a kiválasztott címke használatban van más egyedeknél."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr " \"%1\" telepítése?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "\"%1\" letöltése és telepítése?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "\"%1\" eltávolítása?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "\"%1\" engedélyezése?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "\"%1\" kikapcsolása?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6607,7 +6607,7 @@ msgstr "Értesítse az oldal adminisztrátorát a biztonsági figyelmeztetésrő
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "Megadhatja mint vesszővel elválasztott adat a reCAPTCHA téma opciókat. (Például: theme: 'blackglass', lang: 'fr)."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6700,7 +6700,7 @@ msgstr "Válasszon ki mezőt"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
-msgstr ""
+msgstr "Jelenlegi felhasználó automatikus kiválasztása "
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
@@ -6743,7 +6743,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "'}A weboldalát regisztrálta a CiviCRM.org alatt? Ha nem, kérem segítse a CiviCRM ökoszisztémát erősíteni néhány percet szánva a  <a href=\"%1\" target=\"_blank\">regisztrációs űrlap kitöltésére</a>. Az összegyűjtött információ segít bennünket a fejlesztések irányának, kommunikációnk céljának meghatározásában, és a közösséget építi. Ha ezen oldal működtetésében technikai szerepe van, győződjön meg róla, hogy kiválasztotta a \"Maradjon kapcsolatban\" opciót a technikai frissítések megkapásáért (alacsony forgalmú levelezési lista). "
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
