po: update po/tr_TR/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/campaign.po
+++ b/po/tr_TR/campaign.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 07:30+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -393,7 +393,7 @@ msgstr "Temel Bilgiler"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Sonuçlar"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -1094,7 +1094,7 @@ msgstr "Bu kaydı bir kampanya ile ilişkilendirmek istiyorsanız <a %1>buradan 
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
+msgstr "İstek Kodu ya da İşlem Kodu Pozitif tipte değil."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
@@ -1109,8 +1109,8 @@ msgstr "Serbest bırakıldı"
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 yanıtlayan serbest bırakılmadı."
+msgstr[1] "%count yanıtlayan serbest bırakılmadı."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "You can reserve a maximum of %count contact at a time for this survey."
