po: update po/hu_HU/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/report.po
+++ b/po/hu_HU/report.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 10:17+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1201,7 +1201,7 @@ msgstr "Kattintások: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Leiratkozás"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -2086,20 +2086,20 @@ msgstr "Az oldalankénti sorok alapértelmezett száma 50. Ugyanakkor ez túl so
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr ""
+msgstr "jelentést készítette"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr ""
+msgstr "jelentés tulajdonosa"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Ügyekkel kapcsolatos tevékenységeket is tartalmazza"
 
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Kérem engedélyezze a 'Tartalmazza az ügy tevékenységeket'  az ügy tevékenység típusok szűréséhez."
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
@@ -2158,7 +2158,7 @@ msgstr "Adományok átlaga"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Jelképes ajándék teljesítési dátum"
 
 #: CRM/Report/Form.php
 msgid "Columns"
@@ -2178,31 +2178,31 @@ msgstr "Sorbarendezés"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr ""
+msgstr "Kapcsolat előtag"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Becenév"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr ""
+msgstr "kapcsolat utótag"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr ""
+msgstr "Cím üdvözlés"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Kapcsolat munkaköre"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
-msgstr ""
+msgstr "Kapcsolat azonosító a külső rendszerekben"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
-msgstr ""
+msgstr "%1 ehhez %2"
 
 #: CRM/Report/Info.php
 msgid "access CiviReport"
@@ -2238,7 +2238,7 @@ msgstr "Jelentés űrlapok kezelése"
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 -Sablon"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Title and Format"
