po: update po/tr_TR/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/report.po
+++ b/po/tr_TR/report.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-11 07:52+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1200,7 +1200,7 @@ msgstr "Tıklanma: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Tüm Aboneliklerden Ayrıl"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -2085,20 +2085,20 @@ msgstr "Çoğu rapor için bir sayfada 50 satır bulunur. Bununla birlikte bu de
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr ""
+msgstr "Rapor Örneğini Oluşturan"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr ""
+msgstr "Rapor Örneğinin Sahibi"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Olay İşlemleri Katılsın"
 
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Olay İşlemi tiplerini süzmek için 'Olay İşlemleri Katılsın' seçeneğini etkinleştirin."
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
@@ -2157,7 +2157,7 @@ msgstr "Ortalama Katkı"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Hediyenin Verileceği Tarih"
 
 #: CRM/Report/Form.php
 msgid "Columns"
@@ -2177,31 +2177,31 @@ msgstr "Sıralama"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr ""
+msgstr "Kişi Öneki"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Takma Ad"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr ""
+msgstr "Kişi Soneki"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr ""
+msgstr "Adres Hitabı"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Kişinin iş Ünvanı"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
-msgstr ""
+msgstr "Kişi kodu dış bir sistemden alınıyor"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
-msgstr ""
+msgstr "Bu %2 için %1"
 
 #: CRM/Report/Info.php
 msgid "access CiviReport"
@@ -2237,7 +2237,7 @@ msgstr "Rapor Kalıpları Yönetimi"
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - Kalıp"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Title and Format"
