po: update po/id_ID/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/member.po
+++ b/po/id_ID/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 14:03+0000\n"
+"PO-Revision-Date: 2015-12-12 22:31+0000\n"
 "Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
@@ -1704,7 +1704,7 @@ msgid ""
 "Save the CSV file with your membership data and 'contact matching' data to "
 "your local hard drive (or an accessible drive on your network) - and you are"
 " now ready for step 1 (Upload Data)."
-msgstr "SImpan berkas CSV dengan data keanggotaan dan data 'pencocokan kontak'  ke hard drive lokal anda (atau drive yang dapat diakses di jaringan anda) - dan anda sekarang siap untuk langkah 1 (Unggah Data)."
+msgstr "Simpan berkas CSV dengan data keanggotaan dan data 'pencocokan kontak'  ke hard drive lokal anda (atau penggerak yang dapat diakses di jaringan anda) - dan anda sekarang siap untuk langkah 1 (Unggah Data)."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
