po: update po/hu_HU/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/member.po
+++ b/po/hu_HU/member.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:59+0000\n"
+"PO-Revision-Date: 2015-12-13 15:46+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -2369,7 +2369,7 @@ msgstr "Kattintson a  <a %1>Bankkártyával fizetett  tagság beküldése</a> a 
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status(s)"
-msgstr "Tagság állapot(ok)"
+msgstr "Tagság állapot"
 
 #: CRM/Member/Form/Membership.php
 msgid "Office Credit Card Membership Signup Contribution"
