po: update po/hu_HU/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:30+0000\n"
+"PO-Revision-Date: 2015-12-13 15:45+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -6743,7 +6743,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr "'}A weboldalát regisztrálta a CiviCRM.org alatt? Ha nem, kérem segítse a CiviCRM ökoszisztémát erősíteni néhány percet szánva a  <a href=\"%1\" target=\"_blank\">regisztrációs űrlap kitöltésére</a>. Az összegyűjtött információ segít bennünket a fejlesztések irányának, kommunikációnk céljának meghatározásában, és a közösséget építi. Ha ezen oldal működtetésében technikai szerepe van, győződjön meg róla, hogy kiválasztotta a \"Maradjon kapcsolatban\" opciót a technikai frissítések megkapásáért (alacsony forgalmú levelezési lista). "
+msgstr "A weboldalát regisztrálta a CiviCRM.org alatt? Ha nem, kérem segítse a CiviCRM ökoszisztémát erősíteni néhány percet szánva a  <a href=\"%1\" target=\"_blank\">regisztrációs űrlap kitöltésére</a>. Az összegyűjtött információ segít bennünket a fejlesztések irányának, kommunikációnk céljának meghatározásában, és a közösséget építi. Ha ezen oldal működtetésében technikai szerepe van, győződjön meg róla, hogy kiválasztotta a \"Maradjon kapcsolatban\" opciót a technikai frissítések megkapásáért (alacsony forgalmú levelezési lista). "
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
