po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 16:57+0000\n"
+"PO-Revision-Date: 2015-12-14 15:19+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2266,7 +2266,7 @@ msgstr "Källa för Kontaktdata"
 
 #: CRM/Contact/DAO/Contact.php CRM/Contact/Import/Parser/Contact.php
 msgid "Individual Prefix"
-msgstr "Titel"
+msgstr "Artighetstitel"
 
 #: CRM/Contact/DAO/Contact.php CRM/Contact/Import/Parser/Contact.php
 msgid "Individual Suffix"
@@ -4941,7 +4941,7 @@ msgstr "Duplikateliminieringsregel"
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Lookup mapping info during import?"
-msgstr ""
+msgstr "Sök geo-kodningsinformation under importen?"
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Import Field Separator"
@@ -12448,7 +12448,7 @@ msgstr "Markera denna ruta om den första raden i filen består av överskrifter
 #: templates/CRM/Activity/Import/Form/DataSource.tpl
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
 msgid "Select a Different Field Mapping"
-msgstr ""
+msgstr "Välj en fältmatchning"
 
 #: templates/CRM/Activity/Import/Form/DataSource.tpl
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
@@ -14931,7 +14931,7 @@ msgstr "Välj det format som datum är formaterade med i din importfil."
 msgid ""
 "This option is not recommended for large imports. Use the command-line "
 "geocoding script instead."
-msgstr ""
+msgstr "Detta alternativ rekommenderas inte för stora importer. Använd kommandoradsskriptet för geokodning istället."
 
 #: templates/CRM/Contact/Import/Form/MapTable.tpl
 msgid "Column Names"
@@ -16615,7 +16615,7 @@ msgid ""
 "If you want to use the same export setup in the future, check 'Save this "
 "field mapping' at the bottom of the page before continuing. You will then be"
 " able to reload this setup with a single click."
-msgstr ""
+msgstr "Om du tror att du vill använda samma export-alternativ någon gång i framtiden, kan du markera 'Spara denna fältmatchning' längst ner på sidan innan du går vidare. Du kommer då att enkelt kunna återanvända denna fältmatchning genom att ladda den."
 
 #: templates/CRM/Export/Form/Select.hlp
 msgid ""
@@ -16667,7 +16667,7 @@ msgstr "Uteslut kontakter med \"Skicka inte e-post\", som saknar postadress elle
 
 #: templates/CRM/Export/Form/table.tpl
 msgid "Using Field Mapping: %1"
-msgstr ""
+msgstr "Använder fältmatchning: %1"
 
 #: templates/CRM/Export/Form/table.tpl
 msgid "Fields to Include in Export File"
