po: update po/de_DE/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/financial.po
+++ b/po/de_DE/financial.po
@@ -5,7 +5,7 @@
 # Translators:
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
-# Fabian <schuttenberg@systopia.de>, 2013-2014
+# Fabian <schuttenberg@systopia.de>, 2013-2015
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Hanno <h.paul@praxis-habighorst.de>, 2013
 # Martin Peth <peth@systopia.de>, 2014-2015
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-16 16:26+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -482,7 +482,7 @@ msgstr "Warnung: Nachdem der Batch exportiert ist, kann er nicht mehr geöffnet 
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid "New Financial Account"
-msgstr "Neues Finanzkonto"
+msgstr "Neues Sachkonto"
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid "Edit Financial Account"
