po: update po/sv_SE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-14 22:24+0000\n"
+"PO-Revision-Date: 2015-12-16 13:36+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2077,7 +2077,7 @@ msgstr "Alternativ för kommunikationston"
 
 msgctxt "menu"
 msgid "Import Multi-value Custom Data"
-msgstr ""
+msgstr "Import av fler-värda anpassade data"
 
 msgctxt "menu"
 msgid "Change Registration Selections"
